# skarabina

./: .flake8  .gitignore  AGENTS.md  AVERAGING.md  CHANGES.md  Dockerfile  Dockerfile.conda  Dockerfile.source  Makefile  README.md  build.sh  docker-entrypoint.sh  pyproject.toml  skarabina-stimela-recipe.yml  spectral-flags.example.yml
.github/workflows/: cargo-publish.yml  deploy_module.yaml  docker-publish.yml
cargo/: MANIFEST.in  README.md  pyproject.toml
cargo/examples/: skarabina-stimela-recipe.yml  stimela_run.sh
cargo/skarabina_cargo/: __init__.py  skarabina.yml  stimela.conf
cargo/skarabina_cargo/genesis/: skarabina-base.yml  skarabina-cargo-base.yml
cargo/tests/: test_schema.py
doc/: ANALYZE.md  AVERAGING.md  CHANGES.md  INSTALL.md  SPLITTING.md  index.md  usage.md
example/: skarabina-stimela-recipe.yml  stimela_run.sh  test_run.sh
skarabina/: analyze.py  barber.py  dask_ms.py  hello.py  main.py  skarabina.py  skarabina.yml
skarabina/genesis/: skarabina-base.yml
skarabina/recipes/: skarabina.yml
skarabina_cargo/: README.md  pyproject.toml
skarabina_cargo/genesis/: skarabina-base.yml
tests/: test_avg_validation.py  test_barber.py  test_flag_pipeline.py  test_frequency_average.py  test_integration_time.py  test_null_flagger.py  test_schema.py
