[project]
name = "skarabina"
version = "0.1.4"
description = "Skarabina (dungbeetle): An all purpose 1GC flagger"
authors = [
    {name = "Tim Molteno",email = "tim@elec.ac.nz"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
packages = [{include = "skarabina"}]

dependencies = [
    "dask-ms[xarray,zarr]",
    "stimela >=2.1.2",
    "zarr (>=2.0)"
]


[tool.poetry]

[tool.poetry.scripts]
skarabina = "skarabina.main:main"

[tool.poetry.dependencies]
dask-ms = { git = "https://github.com/tmolteno/dask-ms" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "antlr4-tools"
    ]
build-backend = "poetry.core.masonry.api"


