# Copyright (c) 2025-2026 Tim Molteno (tim@elec.ac.nz)
[project]
name = "skarabina"
version = "0.6.13"
description = "Skarabina (dungbeetle): An all purpose 1GC flagger"
authors = [
    { name = "Tim Molteno", email = "tim@elec.ac.nz" }
]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dask-ms[xarray,zarr]",
    "zarr>=2.0",
]

[project.scripts]
skarabina = "skarabina.main:main"
skarabina-analyze = "skarabina.analyze:main"

[dependency-groups]
dev = ["pytest>=8.4.0", "flake8>=7.0"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:scabha.*",
]
